refactor: replace Stream.collect with Stream.toList() in services